# PecubeGUI

./: .gitignore  Pecube_version.txt  README.md  configs.py  main.py  preferences.txt  pyproject.toml  setup.py
Thermochronology/: argon.py  fission_track.py  helium.py  helium_43.py  settings.py  thermochronometers.py  trapped_charge.py
Utils/: GIS.py  PGUI_utils.py  configs.py  interface.py  interface_graphics.py  interface_inputs.py
Utils/graphics/: batch_results.py  load_results.py  plot_2Dmaps.py  plot_NA.py  set_Thermochronometers.py
gui/: main.py
gui/Core/: preferences.txt
gui/Thermochronology/: helium_43.py  trapped_charge.py
gui/Utils/: interface.py  misfits.py
gui/Utils/graphics/: batch_results.py  plot_NA.py
pecubegui/: __init__.py
pecubegui/Thermochronology/: helium_43.py  settings.py
pecubegui/Utils/: interface.py
pecubegui/Utils/graphics/: batch_results.py  load_results.py
pecubgui/Thermochronology/: thermochronometers.py  trapped_charge.py
pecubgui/Utils/: interface_graphics.py
src/pecubegui/: Combinear.qss  main.py
src/pecubegui/Thermochronology/: argon.py  fission_track.py  helium.py
src/pecubegui/Topography/: update_topography.py
src/pecubegui/Utils/: PGUI_utils.py  configs.py  interface_inputs.py
src/pecubegui/Utils/graphics/: plot_2Dmaps.py  plot_NA.py  set_Thermochronometers.py  set_plot.py
